Fixing width of .keyvaluerow .name table cell to 55 px rather than 52 px to avoid clipping.

--- a/SportsLinkWeb/Content/Site.css
+++ b/SportsLinkWeb/Content/Site.css
@@ -111,7 +111,7 @@ body
 {
     font-weight: bold;
     white-space:nowrap;
-    width: 50px;
+    width: 55px;
 }
 
 .keyvaluerow .value
